fixed scrollbar and height

--- a/style.css
+++ b/style.css
@@ -58,8 +58,30 @@ body {
     justify-content: flex-start;
     gap: 20px;
     overflow-x: auto;
-    padding-bottom: 100px;
-    height: calc(100vh - 114px);
+    padding-bottom: 50px;
+    /* height: calc(100vh - 114px); */
+}
+::-webkit-scrollbar-track,
+.board::-webkit-scrollbar-track,
+.board__list::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 8px;
+}
+::-webkit-scrollbar,
+.board::-webkit-scrollbar,
+.board__list::-webkit-scrollbar {
+	width: 3px;
+    height: 3px;
+    border-radius: 5px;
+	background-color: rgba(255, 255, 255, 0.9);
+}
+::-webkit-scrollbar-thumb,
+.board::-webkit-scrollbar-thumb,
+.board__list::-webkit-scrollbar-thumb {
+	background-color: #8e364e;
+    border-radius: 5px;
+	/* border: 2px solid #555555; */
 }
 .board__list {
     background-color: rgba(255, 255, 255, 0.9);
@@ -69,6 +91,9 @@ body {
     flex-direction: column;
     border-radius: 5px;
     box-shadow: 0px 0px 9px -2px rgba(255,255,255,1);
+    overflow-y: auto;
+    /* height: 500px; */
+    max-height: 550px;
 }
 .board__title {
     font-size: 20px;
@@ -218,7 +243,7 @@ body {
 .edit__btns {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 .edit__btns-right {
     display: flex;
@@ -252,6 +277,10 @@ body {
     height: 10px;
     width: 40px;
     border-radius: 5px;
+    transition: all 0.3s ease;
+}
+.edit__priority-btn:hover {
+    opacity: 0.8;
 }
 .edit__priority-span {
     font-size: 16px;
@@ -285,5 +314,5 @@ body {
     background-color: #172B4D;
 }
 .edit__priority-selected {
-    border: 1px solid black;
+    border: 2px solid rgba(0, 0, 0, 0.5);
 }
